fix: header spacing

--- a/web/components/header/Header.module.scss
+++ b/web/components/header/Header.module.scss
@@ -24,15 +24,15 @@
 .logo {
     display: flex;
     align-items: center;
-    margin: 0 25px;
+    margin: 0 27px;
 }
 
 .user {
-    margin: 0 20px;
+    margin: 0 18px;
 }
 
 .logoText {
-    margin-left: 20px;
+    margin-left: 18px;
     display: flex;
     flex-direction: column;
 }
